tests/integration/snapshots/integration__conformance__n_number_real_without_fractional_part.json.snap
---
source: tests/integration/conformance.rs
expression: output
---
command: "jjp"
status: 1
success: false
stdout ---
[1.]
stderr ---
error: expected fraction digit following dot, found `]`
 --> stdin:1:4
  |
1 | [1.]
  |  --^
  |  ||
  |  |decimal point found here
  |  number found here
