tests/integration/snapshots/integration__conformance__n_number_with_alpha.json.snap
---
source: tests/integration/conformance.rs
expression: output
---
command: "jjp"
status: 1
success: false
stdout ---
[1.2a-3]
stderr ---
error: unexpected character `a`. expected start of a json value
 --> stdin:1:5
  |
1 | [1.2a-3]
  |     ^
