tests/integration/snapshots/integration__conformance__n_number_with_alpha_char.json-format---uglify.snap
---
source: tests/integration/conformance.rs
expression: output.snapshot_display()
---
args: ["format", "--uglify"]
status: 1
success: false
stdin ---
[1.8011670033376514H-308]
stdout ---

stderr ---
error: unexpected character `H`. expected start of a json value
 --> stdin:1:20
  |
1 | [1.8011670033376514H-308]
  |                    ^
