tests/integration/snapshots/integration__conformance__n_object_bad_value.json-format---uglify.snap
---
source: tests/integration/conformance.rs
expression: output.snapshot_display()
---
args: ["format", "--uglify"]
status: 1
success: false
stdin ---
["x", truth]
stdout ---

stderr ---
error: unexpected character `t`. expected start of a json value
 --> stdin:1:7
  |
1 | ["x", truth]
  |       ^
