tests/integration/snapshots/integration__conformance__n_object_bracket_key.json.snap
---
source: tests/integration/conformance.rs
expression: "format_output_snapshot(case.text, &annotated)"
---
case --- 
{[: "x"}

stdout --- 
<empty>
stderr --- 
error: expected entry or closed delimiter `}`, found `[`
 --> stdin:1:2
  |
1 | {[: "x"}
  | -^
  | |
  | expected due to `{`
